change java options to be consistent with ant run target